# aften

./: API C#.txt  API.txt  CMakeLists.txt  Changelog  Makefile  README  bswap.h  common.h  configure
CMakeModules/: CMakeASMInformation.cmake  CMakeDetermineASMCompiler.cmake  CompilerSIMD.cmake  CompilerVisibility.cmake  DetectCompiler.cmake  FlagsTests.cmake
aften/: Makefile  aften.c  helptext.h  opts.c  opts.h  wav.c  wav.h
bindings/: aftenxx.cxx  aftenxx.h
bindings/cs/: AftenTypes.cs  FrameEncoder.cs  FrameEventArgs.cs  Utility.cs
libaften/: Makefile  a52.c  a52.h  a52enc.c  a52enc.h  a52tab.c  a52tab.h  aften-types.h  aften.h  bitalloc.c  bitalloc.h  bitio.c  bitio.h  convert.c  convert.h  cpu_caps.h  crc.c  crc.h  dsp.c  dsp.h  dynrng.c  dynrng.h  exponent.c  exponent.h  exponent_common.c  filter.c  filter.h  mdct.c  mdct.h  mem.h  threading.h  util.c  window.c  window.h
libaften/ppc/: altivec_common.h  cpu_caps.c  cpu_caps.h  mdct.h  mdct_altivec.c  ppc_cpu_caps.c  ppc_cpu_caps.h
libaften/x86/: asm_common.h  asm_support.h  cpu_caps.c  exponent.h  exponent_mmx.c  exponent_sse2.c  gas_support.h  intelas_support.h  mdct.h  mdct_common_init_sse.c  mdct_common_init_sse.h  mdct_common_sse.c  mdct_common_sse.h  mdct_dummy_sse.c  mdct_dummy_sse3.c  mdct_sse.c  mdct_sse3.c  simd_support.h  window.h  window_sse.c  x86_64_linux_cpu_caps_detect.yasm  x86_cpu_caps.c  x86_cpu_caps.h  x86_cpu_caps_detect.nasm  x86_mmx_exponent.c  x86_simd_support.h  x86_sse2_exponent.c  x86_sse3_mdct_dummy.c  x86_sse_mdct_common.c  x86_sse_mdct_common_init.c  x86_sse_mdct_common_init.h  x86_sse_mdct_dummy.c  x86_sse_window.c
pcm/: aiff.c  byteio.c  byteio.h  caff.c  convert.c  formats.c  formats.h  pcm.c  pcm.h  pcm_io.c  pcmfile.c  pcmfile.h  raw.c  wav.c
trunk/: Aften.kdev4  CMakeLists.txt
trunk/src/: Aften.cpp  Aften.h  CMakeLists.txt  main.cpp
util/: Makefile  playrms.sh  wavfilter.c  wavinfo.c  wavrms.c
